# static-engine

./: .gitignore  README.md
src/: CDDEAnalyzeEngine.cpp  CDDEAnalyzeEngine.h  CDownloadFromUrlEngine.cpp  CDownloadFromUrlEngine.h  CEngineSuper.cpp  CEngineSuper.h  CException.cpp  CException.h  CMacroExtractionEngine.cpp  CMacroExtractionEngine.h  CMakeLists.txt  CNoSpear.cpp  CNoSpear.h  CScriptAnalyzeEngine.cpp  CScriptAnalyzeEngine.h  CScriptExtractionEngine.cpp  CScriptExtractionEngine.h  CURLExtractionEngine.cpp  CURLExtractionEngine.h  CXMLAnalyzeModule.cpp  CXMLAnalyzeModule.h  CXMLParsingEngine.cpp  CXMLParsingEngine.h  Makefile  fileDownload.cpp  fileDownload.h  fileParsing.cpp  main.cpp  sha256.cpp  sha256.h
src/SpearCutter/: CCheckInternalCVEEngine.cpp  CCheckInternalCVEEngine.h  CCheckListSuper.cpp  CCheckListSuper.h  CDownloadFromUrlEngine.cpp  CDownloadFromUrlEngine.h  CEngineSuper.cpp  CEngineSuper.h  CException.cpp  CException.h  CMacroExtractionEngine.cpp  CMacroExtractionEngine.h  CMakeLists.txt  CScriptAnalyzeEngine.cpp  CScriptAnalyzeEngine.h  CScriptExtractionEngine.cpp  CSpearCutter.cpp  CSpearCutter.h  CURLExtractionEngine.cpp  CURLExtractionEngine.h  CVE_2017_11882_COM.cpp  CVE_2017_11882_COM.h  CVE_2017_11882_OOXML.cpp  CVE_2017_11882_OOXML.h  HelpFunc.cpp  HelpFunc.h  SampleFileInfo.cpp  SampleFileInfo.h  main.cpp  struct.h
tmp/: fileDownload.cpp  fileParsing.cpp  fileParsing.h
